syntax = "proto2";
import "google/protobuf/empty.proto";
package melody_powersim_proto;

enum StatusType {
  UNKNOWN = 0;
  SUCCEEDED = 1;
  FAILED = 2;
}


message ReadRequest{
  required string timestamp = 1;
  required string objtype = 2;
  required string objid = 3;
  required string fieldtype = 4;
}

message Response {
  required string value = 1;
}

message WriteRequest {
  required string timestamp = 1;
  required string objtype = 2;
  required string objid = 3;
  required string fieldtype = 4;
  required string value = 5;
}

message Status{
  required StatusType status = 1;
}

message KV {
	required string key = 1;
	optional string value = 2;
}

message CyberMessage {
	required string dst_application_id = 1;
	required string src_application_id = 2;
	optional string msg_type =3;
	repeated KV content = 4;
			
}
